--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "htmlrapier.json-editor",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": false,
   "dependencies": {
     "json-editor": "~0.7.28",
-    "htmlrapier": "^2.0.0"
+    "htmlrapier": "^2.1.0"
   },
   "devDependencies": {
-    "threax-gulp-tk": "^1.2.2",
-    "jsns": "^1.0.0"
+    "threax-gulp-tk": "^2.0.0"
   }
 }
